src/tests/snapshots/rust_poker__tests__can_have_fullhouse__tests__fh_with_pair_board.snap
---
source: src/tests/can_have_fullhouse.rs
expression: fh_combis
---
[
    (
        [
            Card {
                value: 11,
                suit: S,
            },
            Card {
                value: 10,
                suit: S,
            },
            Card {
                value: 10,
                suit: H,
            },
        ],
        [
            [
                Card {
                    value: 11,
                    suit: A,
                },
                Card {
                    value: 11,
                    suit: A,
                },
            ],
        ],
    ),
    (
        [
            Card {
                value: 11,
                suit: S,
            },
            Card {
                value: 10,
                suit: S,
            },
            Card {
                value: 10,
                suit: H,
            },
        ],
        [
            [
                Card {
                    value: 11,
                    suit: A,
                },
                Card {
                    value: 10,
                    suit: A,
                },
            ],
        ],
    ),
    (
        [
            Card {
                value: 10,
                suit: S,
            },
            Card {
                value: 10,
                suit: H,
            },
            Card {
                value: 8,
                suit: D,
            },
        ],
        [
            [
                Card {
                    value: 10,
                    suit: A,
                },
                Card {
                    value: 8,
                    suit: A,
                },
            ],
        ],
    ),
    (
        [
            Card {
                value: 10,
                suit: S,
            },
            Card {
                value: 10,
                suit: H,
            },
            Card {
                value: 4,
                suit: C,
            },
        ],
        [
            [
                Card {
                    value: 10,
                    suit: A,
                },
                Card {
                    value: 4,
                    suit: A,
                },
            ],
        ],
    ),
    (
        [
            Card {
                value: 10,
                suit: S,
            },
            Card {
                value: 10,
                suit: H,
            },
            Card {
                value: 8,
                suit: D,
            },
        ],
        [
            [
                Card {
                    value: 8,
                    suit: A,
                },
                Card {
                    value: 8,
                    suit: A,
                },
            ],
        ],
    ),
    (
        [
            Card {
                value: 10,
                suit: S,
            },
            Card {
                value: 10,
                suit: H,
            },
            Card {
                value: 4,
                suit: C,
            },
        ],
        [
            [
                Card {
                    value: 4,
                    suit: A,
                },
                Card {
                    value: 4,
                    suit: A,
                },
            ],
        ],
    ),
]
